--- a/ShopNScroll/src/main/webapp/WEB-INF/web.xml
+++ b/ShopNScroll/src/main/webapp/WEB-INF/web.xml
@@ -43,9 +43,9 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
-<!-- 	<error-page> -->
-<!--         <error-code>404</error-code> -->
-<!--         <location>/404</location> -->
-<!--     </error-page> -->
+	<error-page>
+        <error-code>404</error-code>
+        <location>/404</location>
+    </error-page>
 
 </web-app>
